src/styles/marsMapMaker.scss
/*** MARS MAP MAKER CSS USING BEM (BLOCK, ELEMENT, MODIFIERS) ***/
/*************************/

$mars--border: rgb(46, 14, 8);

* {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

/* App.js */
.mars-photo {
  display: flex;
  position: "relative";
  align-items: center;
  justify-content: center;
  background-image: url("../img/marsMapMakerImg/mars.png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  width: 100vw;
}

.mars-photo_hide {
  display: none;
}

/* CardList.js */
.label {
  width: 100%;
  margin: 0px;
  display: inline-block;
}

.toolbar {
  padding-top: 30px;
}

.toggle__content {

}
.toolbar__help {

}

.toolbar__date {

}

.btn-margin {
  margin: 10px;
}

.description__value {
  position: relative;
  color: rgb(99, 99, 102);
  display: inline-block;
  font-size: 17px;
  width: 15%;
  white-space: nowrap;
}

.description__value .hiddentext {
  visibility: hidden;
  max-width: 300px;
  background-color: rgb(27, 14, 99);
  color: #fff;
  text-align: center;
  border-radius: 4px;
  padding: 5px 0;
  top: 100%;
  left: 50%;
  margin-left: -60px;
  position: absolute;
  z-index: 1;
}

.description__value:hover .hiddentext {
  visibility: visible;
  white-space: pre-wrap;
}

.description__mapped__content .hiddentext {
  visibility: hidden;
  max-width: 300px;
  background-color: rgb(27, 14, 99);
  color: #fff;
  text-align: center;
  border-radius: 4px;
  padding: 5px 0;
  top: 100%;
  left: 50%;
  margin-left: -60px;
  position: absolute;
  z-index: 1;
}

.description__mapped__content:hover .hiddentext {
  visibility: visible;
  white-space: pre-wrap;
}

.marsOutput {
  text-align: center;
  display: inline-block;
  margin: 0%;
}

.mars--icon {
  max-width: 200px;
  width: 100%;
}

.mars--icon:hover {
  cursor: pointer;
}

.preview {
  height: 60px;
  width: 60px;
  padding: 0%;
  margin: 0%;
}

.preview:hover {
  cursor: pointer;
}

.padRight {
  padding-right: 103px;
  display: inline-block;
}

.greyListItem {
  color: rgb(99, 99, 102);
}

.description__title {
  display: inline-block;
  font-size: 17px;
  background-color: inherit;
  padding-top: 15px;
  padding-bottom: 15px;
  white-space: nowrap;
  width: 15%;
  text-align: right;
}

.field_wrapper {
  border-style: solid;
  margin: 1px;
}

.fileReaderUnloaded {
  max-width: 50%;
  background-color: white;
  opacity: 0.89;
  border: solid 4px rgb(46, 14, 8);
  max-height: 50%;
  text-align: center;
  padding-top: 5px;
  padding-bottom: 10px;
  border-radius: 25px;
}

.csv__input {
  padding-left: 20%;
  display: inline-block;
}

.ui.search.dropdown:disabled {
  color: lightslategray;
}

.fileReaderLoaded {
  display: none;
  position: fixed;
  top: 5%;
  left: 40%;
  padding-bottom: 100px;
}

.arrow {
  font-size: 3em;
}

.arrowInfo {
  font-size: 17px;
}

.fa-angle-double-right {
  position: relative;
  z-index: 15;
  top: 50%;
}

.dropDown {
  font-size: 13px;
  min-height: auto !important;

  display: inline-block;
  width: 170px;
}

.description__mapped__header {
  font-size: 17px;
  display: inline-block;
  width: 200px;
  padding-right: 50px;
}

.toolbar__date__format {
  border-style: solid;
  border-color: rgb(224, 225, 226);
  border-width: 1px;
  border-radius: 5px;
  max-width: 260px;
}

.arrowIcon {
  display: inline-block;
  width: 70px;
  padding-left: 25px;
}

.arrowIcon:hover {
  cursor: pointer;
}

.dropDownNoData {
  font-size: 11px;
  display: inline-block;
  width: 200px;
  padding-right: 50px;
  padding-top: 15px;
  text-align: center;
}

.descriptionKeyMapped {
  display: inline-block;
  padding-left: 0px;
  padding-top: 7px;
  width: 40%;
  text-align: right;
}

.descriptionMapped {
  display: inline-block;
  padding-left: 0px;
  padding-top: 7px;
}

.description__mapped__content {
  position: relative;
  display: inline-block;
  color: rgb(99, 99, 102);
  font-size: 17px;
  padding-right: 5px;
}

.ui {
  padding: 0px;
  width: 100%;
  display: inline-block;
}

.description {
  background-color: rgb(224, 225, 226);
  padding: 0px;
  width: 100%;
  display: inline-block;
  border-top: solid;
  border-color: black;
  border-width: 1px;
  border-radius: 5px;
}
.labelInfo {
  background-color: rgb(224, 225, 226);
  width: 100%;
  margin: 0px;
  display: inline-block;
  border-top: solid;
  border-color: black;
  border-width: 1px;
  border-radius: 5px;
}

.check__box {
  display: inline-block;
  padding-top: 0px;
  padding-bottom: 0px;
  margin: 0px;
  padding-left: 10px;
  width: 10%;
}

.description__checkbox {
  display: inline-block;
  padding-top: 0px;
  padding-bottom: 0px;
  margin: 0px;
  padding-left: 10px;
  font-size: 17px;
  width: 10%;
}

.check__box > .inner--checkbox {
  padding: 0px;
  margin: 0px;
  height: 0px;
}

.fieldContainer1 {
  max-height: 10%;
  border-style: solid;
  border-width: 0.5px;
  line-height: 27px;
  background-color: #e9a9a9;
  border-radius: 4px;
}

.fieldContainerDisabled {
  max-height: 10%;
  border-style: solid;
  border-width: 0.5px;
  line-height: 27px;
  border-radius: 4px;
}

.fieldContainerMetadataAdd {
  max-height: 10%;
  border-style: solid;
  border-width: 0.5px;
  background-color: #fcb471;
  line-height: 27px;
  border-radius: 4px;
}

.fieldContainerMetadata {
  max-height: 10%;
  border-style: solid;
  border-width: 0.5px;
  background-color: #fcfa71d2;
  line-height: 27px;
  border-radius: 4px;
}

.rightArrowIcon {
  display: inline-block;
  width: 20px;
}

.refreshButton {
  display: inline-block;
  margin: 0 auto;
}

